<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.provacc.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:contentDescription="@string/salmon_description"
            android:scaleType="centerCrop"
            android:src="@drawable/fish" />

        <ImageView
            android:id="@+id/logo"
            style="@style/logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_height"
            android:layout_alignBottom="@+id/image"
            android:contentDescription="@string/provacc_logo"
            android:paddingBottom="@dimen/logo_vertical_padding"
            android:paddingEnd="@dimen/logo_horizontal_padding"
            android:paddingLeft="@dimen/logo_horizontal_padding"
            android:paddingRight="@dimen/logo_horizontal_padding"
            android:paddingStart="@dimen/logo_horizontal_padding"
            android:paddingTop="@dimen/logo_vertical_padding"
            android:scaleType="fitStart"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/about"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_margin="@dimen/single_margin"
            android:text="@string/about"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about"
            android:layout_marginBottom="@dimen/single_margin"
            android:layout_marginEnd="@dimen/single_margin"
            android:layout_marginLeft="@dimen/single_margin"
            android:layout_marginRight="@dimen/single_margin"
            android:layout_marginStart="@dimen/single_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/list_item_height"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_location"
                android:gravity="center_vertical"
                android:text="@string/location"
                android:textSize="@dimen/details_text_size" />

            <TextView
                android:id="@+id/email"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/list_item_height"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_email"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textSize="@dimen/details_text_size" />

            <TextView
                android:id="@+id/contact"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/list_item_height"
                android:drawableLeft="@drawable/ic_call"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_call"
                android:gravity="center_vertical"
                android:text="@string/contact"
                android:textSize="@dimen/details_text_size" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
